NMT: reserve/release sequence id's in incorrect order due to race

XMLWordPrintable

    • b49
    • Not verified

        When developing new tests for NMT I ended up with:

        # Internal Error (..\..\src\share\vm\services\memSnapshot.cpp:623), pid=6180, tid=10848
        # assert(new_rec->is_allocation_record()) failed: Sanity check

        Zhengyu looked at it and it seems like it's a race where we end up with the wrong sequence id when one thread is releasing memory and another thread is reserving and gets the same address but they end up with incorrectly ordered sequence numbers.

              Assignee:
              Zhengyu Gu
              Reporter:
              Christian Tornqvist
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: